--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -54,6 +54,9 @@ header {
       }
     }
   }
+  #logo-holder a {
+    max-width: 320px;
+  }
   #logo-holder a:focus {
     background-color: $dark;
     outline: none;
