--- a/css/sass/_navigation.scss
+++ b/css/sass/_navigation.scss
@@ -131,3 +131,7 @@
 #more-link[tabindex="0"] {
   text-decoration: underline;
 }
+
+.imgContent > a > img {
+  width: 100%;
+}
